# argo-workflow-runner

./: .env.examples  .gitignore  README.md  pyproject.toml
examples/: client.py  server.py
examples/data/: demo.json  single_code_block.json  single_custom_tool.json  single_intention.json  single_knowledge_base.json  single_llm.json  single_logic_branches.json  single_sp_app.json  single_tool_blip.json  single_tool_google.json  single_tool_web_reader.json  single_tts_gpt_sovits.json
src/: __init__.py
src/argo_workflow_runner/: cli.py  configs.py  env_settings.py
src/argo_workflow_runner/core/: exec_node.py  llm_memory.py  schema.py  server.py  workflow_manager.py
src/argo_workflow_runner/modules/: __init__.py  agent.py  code_block.py  custom_tool.py  intention.py  knowledge_base.py  llm.py  logic_branches.py  sp_app.py  tool_blip.py  tool_evluate.py  tool_google.py  tool_web_reader.py  tts.py
src/argo_workflow_runner/utils/: llm.py  sse_client.py  tts.py  web_search.py  ws_messager.py
